@@ -1068,7 +1068,7 @@ INSERT INTO site
 	('addpar2', '0'),
 	('fixnamethreads', '1'),
 	('fixnamesperrun', '10'),
-	('sqlpatch','123');
+	('sqlpatch','124');
 
 
 DROP TABLE IF EXISTS logging;
@@ -1390,7 +1390,8 @@ INSERT INTO tmux (setting, value) values ('DEFRAG_CACHE','900'),
 	('COLORS_END', '250'),
 	('COLORS_EXC', '4, 8, 9, 11, 15, 16, 17, 18, 19, 46, 47, 48, 49, 50, 51, 52, 53, 59, 60'),
 	('MONITOR_PATH_A', NULL),
-	('MONITOR_PATH_B', NULL);
+	('MONITOR_PATH_B', NULL),
+	('COLORS', 'FALSE');
 
 DROP TABLE IF EXISTS nzbs;
 CREATE TABLE nzbs (
