@@ -16,6 +16,7 @@ $tmux = new Tmux();
 $tmux_session = $tmux->get()->TMUX_SESSION;
 $seq = $tmux->get()->SEQUENTIAL;
 $powerline = $tmux->get()->POWERLINE;
+$colors = $tmux->get()->COLORS;
 
 $site = new Sites();
 $patch = $site->get()->sqlpatch;
@@ -51,7 +52,7 @@ if ( $hashcheck != '1' )
 	exit(1);
 }
 
-if ( $patch < '123' )
+if ( $patch < '124' )
 {
 	echo "\033[1;33mYour database is not up to date. Please update.\n";
 	echo "php ${DIR}testing/DB_scripts/patchDB.php\033[0m\n";
@@ -150,7 +151,8 @@ function window_utilities($tmux_session)
 
 function window_colors($tmux_session)
 {
-    exec("tmux new-window -t $tmux_session -n colors 'printf \"\033]2;tmux_colors\033\"'");
+	echo "WTF";
+	exec("tmux new-window -t $tmux_session -n colors 'printf \"\033]2;tmux_colors\033\"'");
 }
 
 function window_stripped_utilities($tmux_session)
@@ -203,7 +205,8 @@ if ( $seq == 1 )
 
 	window_utilities($tmux_session);
 	window_post($tmux_session);
-	window_colors($tmux_session);
+	if ($colors == "TRUE")
+		window_colors($tmux_session);
 	start_apps($tmux_session);
 	attach($DIR, $tmux_session, $limited);
 }
@@ -214,7 +217,8 @@ elseif ( $seq == 2 )
 	exec("tmux selectp -t $tmux_session:0.0; tmux splitw -t $tmux_session:0 -v -p 33 'printf \"\033]2;nzb-import-bulk\033\"'");
 
 	window_stripped_utilities($tmux_session);
-	window_colors($tmux_session);
+	if ($colors == "TRUE")
+		window_colors($tmux_session);
 	start_apps($tmux_session);
 	attach($DIR, $tmux_session, $limited);
 }
@@ -228,7 +232,8 @@ else
 
 	window_utilities($tmux_session);
 	window_post($tmux_session);
-	window_colors($tmux_session);
+	if ($colors == "TRUE")
+		window_colors($tmux_session);
 	start_apps($tmux_session);
 	attach($DIR, $tmux_session, $limited);
 }
