@@ -17,6 +17,7 @@ import string
 import lib.info as info
 import signal
 import datetime
+import re
 
 threads = 5
 start_time = time.time()
@@ -30,7 +31,7 @@ con.autocommit(True)
 cur = con.cursor()
 
 #cur.execute("UPDATE releases SET reqidstatus = -1 WHERE reqidstatus = 0 AND nzbstatus = 1 AND relnamestatus in (0, 1, 20) AND name REGEXP '^\\[[[:digit:]]+\\]' = 0")
-cur.execute("SELECT r.id, r.name, g.name AS groupname FROM releases r LEFT JOIN groups g ON r.groupid = g.id WHERE ( relnamestatus in (0, 1, 20, 21, 22) OR categoryid BETWEEN 7000 and 7999 ) AND nzbstatus = 1 AND reqidstatus in (0, -1) AND ( r.name REGEXP '^\\[[[:digit:]]+\\]' = 1 OR r.searchname REGEXP '^\\[[[:digit:]]+\\]' = 1 ) limit 1000")
+cur.execute("SELECT r.id, r.name, g.name AS groupname FROM releases r LEFT JOIN groups g ON r.groupid = g.id WHERE ( relnamestatus in (0, 1, 20, 21, 22) OR categoryid BETWEEN 7000 and 7999 ) AND nzbstatus = 1 AND reqidstatus in (0, -1) AND r.name REGEXP '^\\[[[:digit:]]+\\]' = 1 limit 10000")
 datas = cur.fetchall()
 
 if not datas:
@@ -86,10 +87,14 @@ def main():
 
 	#now load some arbitrary jobs into the queue
 	for release in datas:
-		my_queue.put("'%s'                       '%s'                       '%s'" % (release[0], release[1], release[2]))
+		match = re.search('/^\[\d+\]/', release[1])
+		if match:
+			process(my_queue.put("'%s'                       '%s'                       '%s'" % (release[0], release[1], release[2])))
 
 	my_queue.join()
 
+	print("\nRequestID Threaded Completed at %s" % (datetime.datetime.now().strftime("%H:%M:%S")))
+	print("Running time: %s" % (str(datetime.timedelta(seconds=time.time() - start_time))))
 	print("\n")
 if __name__ == '__main__':
 	main()
