@@ -1,5 +1,7 @@
 NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
 
+09172013 -> jonnyboy -> made color pane optional
+						fixed bug in fixreleasenames par2
 09162013 -> jonnyboy -> added pron to monitor
                         changed python script to escape strings
                         bug fixes
